--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -11,7 +11,7 @@
         app:navigationIcon="@mipmap/ic_icon"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
+        android:background="@color/backgroundToolbar"
         app:title="@string/toolbar_title_demirbas"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
