--- a/app/src/main/res/layout/item_envanter_card.xml
+++ b/app/src/main/res/layout/item_envanter_card.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -8,14 +10,11 @@
             type="com.uniyaz.mobiltif.data.domain.Envanter" />
     </data>
 
-    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="3dp"
-
-        android:layout_marginBottom="3dp"
+        android:layout_marginTop="10dp"
         android:background="@color/cardview_shadow_start_color">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -66,6 +65,27 @@
                 app:layout_constraintEnd_toEndOf="@+id/viewCizgi"
                 app:layout_constraintStart_toStartOf="@+id/viewCizgi"
                 app:layout_constraintTop_toBottomOf="@+id/viewCizgi" />
+
+            <Button
+                android:id="@+id/btnResim"
+                android:layout_width="61dp"
+                android:layout_height="29dp"
+                android:layout_marginEnd="8dp"
+                android:drawableLeft="@drawable/ic_search_for_btn"
+                android:text="Resim"
+                android:textSize="8sp"
+                app:layout_constraintEnd_toEndOf="@+id/tvAlt"
+                app:layout_constraintTop_toBottomOf="@+id/tvAlt" />
+
+            <Button
+                android:id="@+id/btnDetay"
+                android:layout_width="61dp"
+                android:layout_height="29dp"
+                android:drawableLeft="@drawable/ic_search_for_btn"
+                android:text="Detay"
+                android:textSize="8sp"
+                app:layout_constraintEnd_toStartOf="@+id/btnResim"
+                app:layout_constraintTop_toTopOf="@+id/btnResim" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
