EnvatterList için ekran tasarımı ve EnvanterDetay için bind işlemi

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,7 @@
                 android:layout_height="?attr/actionBarSize"
                 android:background="@color/backgroundToolbar"
                 app:navigationIcon="@mipmap/ic_icon"
+                app:layout_scrollFlags="scroll|enterAlways"
                 app:title="@{viewModel.titleToolbar}"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                 />
